--- a/runner.html
+++ b/runner.html
@@ -37,6 +37,9 @@
       text-decoration: underline;
     }
   </style>
+
+  <script data-goatcounter="https://damk.goatcounter.com/count"
+          async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
   <nav>
