--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="damk is personal space — drawings, soft memories, small objects." />
-  <title>index — damk</title>
+  <title>about — damk</title>
   <link rel="stylesheet" href="css/styles.css" />
   <script data-goatcounter="https://damk.goatcounter.com/count"
           async src="//gc.zgo.at/count.js"></script>
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav>
-      <a href="about.html">about</a>
+      <a href="index.html">about</a>
       <a href="archive.html">archive</a>
       <a href="objects.html">objects</a>
       <a href="runner.html">game</a>
@@ -20,8 +20,8 @@
   </header>
 
   <main>
-    <h1>index</h1>
-    <p>i draw memory<br><small>sometimes it helps to not forget</small></p>
+    <h1>about</h1>
+    <p>i try to draw how it felt, not how it looked.<br>i make toys, because the memory is soft.</p>
   </main>
 
   <footer>
