--- a/archive.html
+++ b/archive.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav>
-      <a href="about.html">about</a>
+      <a href="index.html">about</a>
       <a href="archive.html">archive</a>
       <a href="objects.html">objects</a>
       <a href="runner.html">game</a>
