--- a/objects.html
+++ b/objects.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="damk is personal space — drawings, soft memories, small objects." />
-  <title>objects — damk</title>
+  <title>goods — damk</title>
   <link rel="stylesheet" href="css/styles.css" />
   <script data-goatcounter="https://damk.goatcounter.com/count"
           async src="//gc.zgo.at/count.js"></script>
@@ -14,7 +14,7 @@
     <nav>
       <a href="index.html">about</a>
       <a href="archive.html">archive</a>
-      <a href="objects.html">objects</a>
+      <a href="objects.html">goods</a>
       <a href="runner.html">game</a>
     </nav>
   </header>
@@ -42,6 +42,10 @@
     one of a kind · no corrections
   </p>
 </section>
+
+<div class="gumroad-link">
+  <p>some pieces are available as downloads — <a href="https://evgdamk.gumroad.com/" target="_blank">check them here</a></p>
+</div>
 
 <p>to order — <a href="https://instagram.com/evg.damk">DM me on Instagram</a></p></p>
   </main>
