--- a/runner.html
+++ b/runner.html
@@ -45,7 +45,7 @@
   <nav>
     <a href="index.html">about</a>
     <a href="archive.html">archive</a>
-    <a href="objects.html">objects</a>
+    <a href="objects.html">goods</a>
     <a href="runner.html">game</a>
   </nav>
 
