--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
 
   <main>
     <h1>about</h1>
-    <p>i try to draw how it felt, not how it looked.<br>i make toys, because the memory is soft.</p>
+    <p>My name is DAMK. I make paintings, characters and objects from things I remember — and things I never want to forget.<br/>
+      I grew up in a post-Soviet city where garages, playgrounds, cracked tiles and old cars meant safety.
+      Now I live in Lisbon and I rebuild those scenes — sometimes in paint, sometimes in plastic, sometimes as a small monkey figure that follows me everywhere.<br/>
+      I work with memory, loneliness, and everyday urban silence.
+      My pieces live somewhere between street culture and soft sadness.<br/>
+      I want to show a visual world that feels forgotten, but familiar.
+      The places that shaped us, even if nobody noticed them.<br/>
+      My practice mixes nostalgia, street memory, irony and quiet objects — like playgrounds without kids, or toys that never smile.</p>
   </main>
 
   <footer>
