--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
   <main>
     <h1>about</h1>
-    <p>My name is DAMK. I make paintings, characters and objects from things I remember — and things I never want to forget.<br/>
-      I grew up in a post-Soviet city where garages, playgrounds, cracked tiles and old cars meant safety.
-      Now I live in Lisbon and I rebuild those scenes — sometimes in paint, sometimes in plastic, sometimes as a small monkey figure that follows me everywhere.<br/>
-      I work with memory, loneliness, and everyday urban silence.
-      My pieces live somewhere between street culture and soft sadness.<br/>
-      I want to show a visual world that feels forgotten, but familiar.
-      The places that shaped us, even if nobody noticed them.<br/>
+    <p>My name is DAMK. I make paintings, characters and objects from things I remember — and things I never want to forget.<br/><br/>
+      I grew up in a post-Soviet city where garages, playgrounds, cracked tiles and old cars meant safety.<br/>
+      Now I live in Lisbon and I rebuild those scenes — sometimes in paint, sometimes in plastic, sometimes as a small monkey figure that follows me everywhere.<br/><br/>
+      I work with memory, loneliness, and everyday urban silence.<br/>
+      My pieces live somewhere between street culture and soft sadness.<br/><br/>
+      I want to show a visual world that feels forgotten, but familiar.<br/>
+      The places that shaped us, even if nobody noticed them.<br/><br/>
       My practice mixes nostalgia, street memory, irony and quiet objects — like playgrounds without kids, or toys that never smile.</p>
   </main>
 
