--- a/runner.html
+++ b/runner.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">about</a>
+    <a href="/">about</a>
     <a href="archive.html">archive</a>
     <a href="objects.html">goods</a>
     <a href="runner.html">game</a>
