--- a/archive.html
+++ b/archive.html
@@ -35,7 +35,7 @@
       if (!gallery) return;
 
       const archiveImages = [
-        "1.jpg", "2.jpg", "3.jpg", "4.jpg", "5.jpg", "6.jpg", "7.jpg"
+        "1.jpg", "2.jpg", "3.jpg", "4.jpg", "5.jpg", "6.jpg", "7.jpg", "8.jpg"
       ];
 
       archiveImages.forEach((filename) => {
