--- a/archive.html
+++ b/archive.html
@@ -1,84 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>archive — damk</title>
-  <meta name="description" content="damk is personal space — drawings, soft memories, small objects." />
-  <link rel="stylesheet" href="css/styles.css" />
-  <script data-goatcounter="https://damk.goatcounter.com/count"
-          async src="//gc.zgo.at/count.js"></script>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>archive — damk</title>
+    <meta name="description" content="damk is personal space — drawings, soft memories, small objects."/>
+    <link rel="stylesheet" href="css/styles.css"/>
+    <script data-goatcounter="https://damk.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
-  <header>
+<header>
     <nav>
-      <a href="/">about</a>
-      <a href="archive.html">archive</a>
-      <a href="objects.html">goods</a>
-      <a href="runner.html">game</a>
+        <a href="/">about</a>
+        <a href="archive.html">archive</a>
+        <a href="objects.html">goods</a>
+        <a href="runner.html">game</a>
     </nav>
-  </header>
+</header>
 
-  <main>
+<main>
     <h1>archive</h1>
     <p>drawings. pieces. silence.</p>
-    <div class="gallery" id="gallery"></div>
-  </main>
+    <div id="archive-sections"></div>
+</main>
 
-  <footer>
-    <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
-  </footer>
+<footer>
+    <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey"/>
+</footer>
 
-  <script>
+<script>
     document.addEventListener('DOMContentLoaded', () => {
-      const gallery = document.getElementById('gallery');
-      if (!gallery) return;
-
-      const archiveImages = [
-        "1.jpg", "2.jpg", "3.jpg", "4.jpg", "5.jpg", "6.jpg", "7.jpg", "8.jpg", "9.jpg"
-      ];
-
-      archiveImages.forEach((filename) => {
-        const src = "assets/archive/" + filename;
-        const img = new Image();
-        img.src = src;
-        img.onload = () => {
-          const wrapper = document.createElement('div');
-          wrapper.className = 'gallery-item';
-          wrapper.appendChild(img);
-          gallery.appendChild(wrapper);
+        const sections = {
+            canvases: ['2023_canvas1.jpg',
+                '2023_canvas2.jpg',
+                '2023_canvas3.jpg',
+                '2024_canvas1.jpg',
+                '2024_canvas2.jpg',
+                '2024_canvas3.jpg',
+                '2024_canvas4.jpg',
+                '2024_canvas5.jpg',
+                '2024_canvas6.jpg',
+                '2024_canvas7.jpg',
+                '2024_canvas8.jpg',
+                '2024_canvas9.jpg'],
+            figures: ['2023_figure1.jpg',
+                '2024_figure2.jpg',
+                '2024_figure3.jpg',
+                '2024_figure4.jpg',
+                '2025_figure1.jpg'],
+            jewelry: ['2025_jewelry1.jpg',
+                '2025_jewelry2.jpg'],
+            other: ['2023_other1.jpg',
+                '2023_other2.jpg',
+                '2023_other3.jpg',
+                '2023_other4.jpg',
+                '2024_other1.jpg',
+                '2024_other2.jpg',
+                '2024_other3.jpg',
+                '2024_other4.jpg']
         };
-      });
 
-      const monkey = document.getElementById('monkey');
-      const images = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
-      let clickable = true;
+        const container = document.getElementById('archive-sections');
 
-      monkey.addEventListener('click', () => {
-        if (!clickable) return;
+        for (const [category, images] of Object.entries(sections)) {
+            const section = document.createElement('section');
+            section.className = 'gallery-section';
 
-        const current = monkey.getAttribute('src').split('/').pop();
-        const others = images.filter(img => img !== current);
-        const next = others[Math.floor(Math.random() * others.length)];
-        const tempImg = new Image();
-        tempImg.onload = () => {
-          monkey.setAttribute('src', 'assets/' + next);
-          if (next === 'monkey3.png') {
-            clickable = false;
-            monkey.style.transition = 'none';
-            monkey.style.transform = 'rotate(0deg) scale(1)';
-            void monkey.offsetWidth;
-            monkey.style.transition = 'transform 1.8s ease-in-out';
-            monkey.style.transform = 'rotate(1440deg) scale(2.5)';
-            setTimeout(() => {
-              monkey.style.transform = 'rotate(0deg) scale(1)';
-              clickable = true;
-            }, 2000);
-          }
-        };
-        tempImg.src = 'assets/' + next;
-      });
+            const heading = document.createElement('h2');
+            heading.textContent = category;
+            section.appendChild(heading);
+
+            const grid = document.createElement('div');
+            grid.className = 'gallery';
+
+            images.forEach((filename) => {
+                const [year] = filename.split('_');
+                const img = new Image();
+                img.src = `assets/archive/${category}/${filename}`;
+
+                const wrapper = document.createElement('div');
+                wrapper.className = 'gallery-item';
+
+                const caption = document.createElement('div');
+                caption.className = 'caption';
+                caption.textContent = year;
+
+                wrapper.appendChild(img);
+                wrapper.appendChild(caption);
+                grid.appendChild(wrapper);
+            });
+
+            section.appendChild(grid);
+            container.appendChild(section);
+        }
+
+        const monkey = document.getElementById('monkey');
+        const images = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
+        let clickable = true;
+
+        monkey.addEventListener('click', () => {
+            if (!clickable) return;
+
+            const current = monkey.getAttribute('src').split('/').pop();
+            const others = images.filter(img => img !== current);
+            const next = others[Math.floor(Math.random() * others.length)];
+            const tempImg = new Image();
+            tempImg.onload = () => {
+                monkey.setAttribute('src', 'assets/' + next);
+                if (next === 'monkey3.png') {
+                    clickable = false;
+                    monkey.style.transition = 'none';
+                    monkey.style.transform = 'rotate(0deg) scale(1)';
+                    void monkey.offsetWidth;
+                    monkey.style.transition = 'transform 1.8s ease-in-out';
+                    monkey.style.transform = 'rotate(1440deg) scale(2.5)';
+                    setTimeout(() => {
+                        monkey.style.transform = 'rotate(0deg) scale(1)';
+                        clickable = true;
+                    }, 2000);
+                }
+            };
+            tempImg.src = 'assets/' + next;
+        });
     });
-  </script>
+</script>
 </body>
 </html>
