--- a/archive.html
+++ b/archive.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>archive — damk</title>
-    <meta name="description" content="damk is personal space — drawings, soft memories, small objects."/>
-    <link rel="stylesheet" href="css/styles.css"/>
-    <script data-goatcounter="https://damk.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
 <header>
@@ -21,16 +12,29 @@
 <main>
     <h1>archive</h1>
     <p>drawings. pieces. silence.</p>
-    <div id="archive-sections"></div>
+
+    <div class="tabs" id="tabs">
+        <button class="tab-button active" data-tab="canvases">canvases</button>
+        <button class="tab-button" data-tab="figures">figures</button>
+        <button class="tab-button" data-tab="jewelry">jewelry</button>
+        <button class="tab-button" data-tab="other">other</button>
+    </div>
+
+    <div id="archive-sections">
+        <section class="gallery-section active" data-tab="canvases"></section>
+        <section class="gallery-section" data-tab="figures"></section>
+        <section class="gallery-section" data-tab="jewelry"></section>
+        <section class="gallery-section" data-tab="other"></section>
+    </div>
 </main>
 
 <footer>
-    <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey"/>
+    <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
 </footer>
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
-        const sections = {
+        const data = {
             canvases: ['2023_canvas1.jpg',
                 '2023_canvas2.jpg',
                 '2023_canvas3.jpg',
@@ -60,20 +64,14 @@
                 '2024_other4.jpg']
         };
 
-        const container = document.getElementById('archive-sections');
-
-        for (const [category, images] of Object.entries(sections)) {
-            const section = document.createElement('section');
-            section.className = 'gallery-section';
-
-            const heading = document.createElement('h2');
-            heading.textContent = category;
-            section.appendChild(heading);
+        for (const [category, files] of Object.entries(data)) {
+            const section = document.querySelector(`.gallery-section[data-tab="${category}"]`);
+            if (!section) continue;
 
             const grid = document.createElement('div');
             grid.className = 'gallery';
 
-            images.forEach((filename) => {
+            files.forEach((filename) => {
                 const [year] = filename.split('_');
                 const img = new Image();
                 img.src = `assets/archive/${category}/${filename}`;
@@ -91,22 +89,36 @@
             });
 
             section.appendChild(grid);
-            container.appendChild(section);
         }
 
+        const buttons = document.querySelectorAll('.tab-button');
+        const sections = document.querySelectorAll('.gallery-section');
+
+        buttons.forEach(btn => {
+            btn.addEventListener('click', () => {
+                const tab = btn.dataset.tab;
+
+                buttons.forEach(b => b.classList.remove('active'));
+                btn.classList.add('active');
+
+                sections.forEach(s => {
+                    s.classList.toggle('active', s.dataset.tab === tab);
+                });
+            });
+        });
+
         const monkey = document.getElementById('monkey');
-        const images = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
+        const monkeyImgs = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
         let clickable = true;
 
         monkey.addEventListener('click', () => {
             if (!clickable) return;
 
             const current = monkey.getAttribute('src').split('/').pop();
-            const others = images.filter(img => img !== current);
-            const next = others[Math.floor(Math.random() * others.length)];
+            const next = monkeyImgs.find(m => m !== current) || 'monkey1.png';
             const tempImg = new Image();
             tempImg.onload = () => {
-                monkey.setAttribute('src', 'assets/' + next);
+                monkey.src = 'assets/' + next;
                 if (next === 'monkey3.png') {
                     clickable = false;
                     monkey.style.transition = 'none';
