--- a/archive.html
+++ b/archive.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>archive — damk</title>
+    <meta name="description" content="damk is personal space — drawings, soft memories, small objects." />
+    <link rel="stylesheet" href="css/styles.css" />
+    <script data-goatcounter="https://damk.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
 <header>
