--- a/archive.html
+++ b/archive.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>archive — damk</title>
-    <meta name="description" content="damk is personal space — drawings, soft memories, small objects." />
-    <link rel="stylesheet" href="css/styles.css" />
+    <meta name="description" content="damk is personal space — drawings, soft memories, small objects."/>
+    <link rel="stylesheet" href="css/styles.css"/>
     <script data-goatcounter="https://damk.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
@@ -38,7 +38,7 @@
 </main>
 
 <footer>
-    <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
+    <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey"/>
 </footer>
 
 <script>
@@ -81,49 +81,39 @@
             });
         });
 
-        const buttons = document.querySelectorAll('.tab-button');
-        const sections = document.querySelectorAll('.gallery-section');
+        const gallery = document.getElementById('gallery');
+        const buttons = document.querySelectorAll('.category-button');
 
-        buttons.forEach(btn => {
-            btn.addEventListener('click', () => {
-                const tab = btn.dataset.tab;
+        buttons.forEach(button => {
+            button.addEventListener('click', () => {
+                const selectedCategory = button.dataset.category;
+                gallery.innerHTML = '';
 
-                buttons.forEach(b => b.classList.remove('active'));
-                btn.classList.add('active');
+                data[selectedCategory].forEach(filename => {
+                    const src = 'assets/archive/' + filename;
+                    const img = new Image();
+                    img.src = src;
 
-                sections.forEach(s => {
-                    s.classList.toggle('active', s.dataset.tab === tab);
+                    img.onload = () => {
+                        const wrapper = document.createElement('div');
+                        wrapper.className = 'gallery-item';
+
+                        const year = filename.split('_')[0];
+                        const caption = document.createElement('div');
+                        caption.className = 'caption';
+                        caption.textContent = year;
+
+                        wrapper.appendChild(img);
+                        wrapper.appendChild(caption);
+                        gallery.appendChild(wrapper);
+                    };
                 });
             });
         });
 
-        const monkey = document.getElementById('monkey');
-        const monkeyImgs = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
-        let clickable = true;
-
-        monkey.addEventListener('click', () => {
-            if (!clickable) return;
-
-            const current = monkey.getAttribute('src').split('/').pop();
-            const next = monkeyImgs.find(m => m !== current) || 'monkey1.png';
-            const tempImg = new Image();
-            tempImg.onload = () => {
-                monkey.src = 'assets/' + next;
-                if (next === 'monkey3.png') {
-                    clickable = false;
-                    monkey.style.transition = 'none';
-                    monkey.style.transform = 'rotate(0deg) scale(1)';
-                    void monkey.offsetWidth;
-                    monkey.style.transition = 'transform 1.8s ease-in-out';
-                    monkey.style.transform = 'rotate(1440deg) scale(2.5)';
-                    setTimeout(() => {
-                        monkey.style.transform = 'rotate(0deg) scale(1)';
-                        clickable = true;
-                    }, 2000);
-                }
-            };
-            tempImg.src = 'assets/' + next;
-        });
+        if (buttons.length > 0) {
+            buttons[0].click();
+        }
     });
 </script>
 </body>
