--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/styles.css" />
   <script data-goatcounter="https://damk.goatcounter.com/count"
           async src="//gc.zgo.at/count.js"></script>
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <header>
