--- a/runner.html
+++ b/runner.html
@@ -40,6 +40,7 @@
 
   <script data-goatcounter="https://damk.goatcounter.com/count"
           async src="//gc.zgo.at/count.js"></script>
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <nav>
