--- a/index.html
+++ b/index.html
@@ -1,74 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="damk is personal space — drawings, soft memories, small objects." />
-  <title>about — damk</title>
-  <link rel="stylesheet" href="css/styles.css" />
-  <script data-goatcounter="https://damk.goatcounter.com/count"
-          async src="//gc.zgo.at/count.js"></script>
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="damk is personal space — drawings, soft memories, small objects."/>
+    <title>about — damk</title>
+    <link rel="stylesheet" href="css/styles.css"/>
+    <script data-goatcounter="https://damk.goatcounter.com/count"
+            async src="//gc.zgo.at/count.js"></script>
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
-  <header>
+<header>
     <nav>
-      <a href="/">about</a>
-      <a href="archive.html">archive</a>
-      <a href="objects.html">goods</a>
-      <a href="runner.html">game</a>
+        <a href="/">about</a>
+        <a href="archive.html">archive</a>
+        <a href="objects.html">commission</a>
+        <a href="runner.html">game</a>
     </nav>
-  </header>
+</header>
 
-  <main>
+<main>
     <h1>about</h1>
-    <p>My name is DAMK. I make paintings, characters and objects from things I remember — and things I never want to forget.<br/><br/>
-      I grew up in a post-Soviet city where garages, playgrounds, cracked tiles and old cars meant safety.<br/>
-      Now I live in Lisbon and I rebuild those scenes — sometimes in paint, sometimes in plastic, sometimes as a small monkey figure that follows me everywhere.<br/><br/>
-      I work with memory, loneliness, and everyday urban silence.<br/>
-      My pieces live somewhere between street culture and soft sadness.<br/><br/>
-      I want to show a visual world that feels forgotten, but familiar.<br/>
-      The places that shaped us, even if nobody noticed them.<br/><br/>
-      My practice mixes nostalgia, street memory, irony and quiet objects — like playgrounds without kids, or toys that never smile.</p>
-  </main>
+    <p>My name is DAMK. I make paintings, characters and objects from things I remember — and things I never want to
+        forget.<br/><br/>
+        I grew up in a post-Soviet city where garages, playgrounds, cracked tiles and old cars meant safety.<br/>
+        Now I live in Lisbon and I rebuild those scenes — sometimes in paint, sometimes in plastic, sometimes as a small
+        monkey figure that follows me everywhere.<br/><br/>
+        I work with memory, loneliness, and everyday urban silence.<br/>
+        My pieces live somewhere between street culture and soft sadness.<br/><br/>
+        I want to show a visual world that feels forgotten, but familiar.<br/>
+        The places that shaped us, even if nobody noticed them.<br/><br/>
+        My practice mixes nostalgia, street memory, irony and quiet objects — like playgrounds without kids, or toys
+        that never smile.</p>
+</main>
 
-  <footer>
-    <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
-  </footer>
+<footer>
+    <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey"/>
+    <div style="margin-top: 1em;">
+        <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
+                data-name="bmc-button" data-slug="evgdamk" data-color="#FFDD00" data-emoji="" data-font="Comic"
+                data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000"
+                data-coffee-color="#ffffff"></script>
+    </div>
+</footer>
 
-  <script>
+<script>
     const monkey = document.getElementById('monkey');
     const images = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
     let clickable = true;
 
     monkey.addEventListener('click', () => {
-      if (!clickable) return;
+        if (!clickable) return;
 
-      const current = monkey.getAttribute('src').split('/').pop();
-      const others = images.filter(img => img !== current);
-      const next = others[Math.floor(Math.random() * others.length)];
+        const current = monkey.getAttribute('src').split('/').pop();
+        const others = images.filter(img => img !== current);
+        const next = others[Math.floor(Math.random() * others.length)];
 
-      const tempImg = new Image();
-      tempImg.onload = () => {
-        monkey.setAttribute('src', 'assets/' + next);
+        const tempImg = new Image();
+        tempImg.onload = () => {
+            monkey.setAttribute('src', 'assets/' + next);
 
-        if (next === 'monkey3.png') {
-          clickable = false;
+            if (next === 'monkey3.png') {
+                clickable = false;
 
-          monkey.style.transition = 'none';
-          monkey.style.transform = 'rotate(0deg) scale(1)';
-          void monkey.offsetWidth;
-          monkey.style.transition = 'transform 1.8s ease-in-out';
-          monkey.style.transform = 'rotate(1440deg) scale(2.5)';
+                monkey.style.transition = 'none';
+                monkey.style.transform = 'rotate(0deg) scale(1)';
+                void monkey.offsetWidth;
+                monkey.style.transition = 'transform 1.8s ease-in-out';
+                monkey.style.transform = 'rotate(1440deg) scale(2.5)';
 
-          setTimeout(() => {
-            monkey.style.transform = 'rotate(0deg) scale(1)';
-            clickable = true;
-          }, 2000);
-        }
-      };
-      tempImg.src = 'assets/' + next;
+                setTimeout(() => {
+                    monkey.style.transform = 'rotate(0deg) scale(1)';
+                    clickable = true;
+                }, 2000);
+            }
+        };
+        tempImg.src = 'assets/' + next;
     });
-  </script>
+</script>
 </body>
 </html>
