--- a/objects.html
+++ b/objects.html
@@ -15,13 +15,13 @@
     <nav>
       <a href="/">about</a>
       <a href="archive.html">archive</a>
-      <a href="objects.html">goods</a>
+      <a href="objects.html">commission</a>
       <a href="runner.html">game</a>
     </nav>
   </header>
 
   <main>
-    <h1>objects</h1>
+    <h1>commission</h1>
     <p>you can take these with you. or not.
 
 <section class="object">
@@ -49,6 +49,12 @@
 
   <footer>
     <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
+    <div style="margin-top: 1em;">
+      <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
+              data-name="bmc-button" data-slug="evgdamk" data-color="#FFDD00" data-emoji="" data-font="Comic"
+              data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000"
+              data-coffee-color="#ffffff"></script>
+    </div>
   </footer>
 
   <script>
