--- a/runner.html
+++ b/runner.html
@@ -46,7 +46,7 @@
   <nav>
     <a href="/">about</a>
     <a href="archive.html">archive</a>
-    <a href="objects.html">goods</a>
+    <a href="objects.html">commission</a>
     <a href="runner.html">game</a>
   </nav>
 
