--- a/archive.html
+++ b/archive.html
@@ -124,7 +124,7 @@
         });
 
         const monkey = document.getElementById('monkey');
-        const monkeyImgs = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
+        const images = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
         let clickable = true;
 
         monkey.addEventListener('click', () => {
