--- a/objects.html
+++ b/objects.html
@@ -51,7 +51,7 @@
     <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
     <div style="margin-top: 1em;">
       <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
-              data-name="bmc-button" data-slug="evgdamk" data-color="#FFDD00" data-emoji="" data-font="Comic"
+              data-name="bmc-button" data-slug="evgdamk" data-color="#FFDD00" data-emoji=""
               data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000"
               data-coffee-color="#ffffff"></script>
     </div>
