--- a/game/index.html
+++ b/game/index.html
@@ -45,9 +45,10 @@
 <body>
   <nav>
     <a href="/">about</a>
-    <a href="archive.html">archive</a>
-    <a href="objects.html">commission</a>
-    <a href="runner.html">game</a>
+    <a href="/">about</a>
+    <a href="/archive">archive</a>
+    <a href="/objects">commission</a>
+    <a href="/game">game</a>
   </nav>
 
   <canvas id="game"></canvas>
