--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="damk is personal space — drawings, soft memories, small objects."/>
+    <link rel="canonical" href="https://evgdamk.com/"/>
     <title>about — damk</title>
     <link rel="stylesheet" href="css/styles.css"/>
     <script data-goatcounter="https://damk.goatcounter.com/count"
@@ -14,9 +15,9 @@
 <header>
     <nav>
         <a href="/">about</a>
-        <a href="archive.html">archive</a>
-        <a href="objects.html">commission</a>
-        <a href="runner.html">game</a>
+        <a href="/archive">archive</a>
+        <a href="/objects">commission</a>
+        <a href="/game">game</a>
     </nav>
 </header>
 
