--- a/objects/index.html
+++ b/objects/index.html
@@ -14,9 +14,9 @@
   <header>
     <nav>
       <a href="/">about</a>
-      <a href="archive.html">archive</a>
-      <a href="objects.html">commission</a>
-      <a href="runner.html">game</a>
+      <a href="/archive">archive</a>
+      <a href="/objects">commission</a>
+      <a href="/game">game</a>
     </nav>
   </header>
 
