--- a/objects/index.html
+++ b/objects/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="damk is personal space — drawings, soft memories, small objects." />
   <title>goods — damk</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
   <script data-goatcounter="https://damk.goatcounter.com/count"
           async src="//gc.zgo.at/count.js"></script>
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <header>
@@ -48,7 +48,7 @@
   </main>
 
   <footer>
-    <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
+    <img src="../assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
   </footer>
 
   <script>
@@ -65,7 +65,7 @@
 
       const tempImg = new Image();
       tempImg.onload = () => {
-        monkey.setAttribute('src', 'assets/' + next);
+        monkey.setAttribute('src', '../assets/' + next);
 
         if (next === 'monkey3.png') {
           clickable = false;
@@ -82,7 +82,7 @@
           }, 2000);
         }
       };
-      tempImg.src = 'assets/' + next;
+      tempImg.src = '../assets/' + next;
     });
   </script>
 </body>
