--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css"/>
     <script data-goatcounter="https://damk.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 <header>
@@ -37,7 +37,7 @@
 </main>
 
 <footer>
-    <img src="assets/monkey1.png" alt="monkey" class="monkey" id="monkey"/>
+    <img src="../assets/monkey1.png" alt="monkey" class="monkey" id="monkey"/>
 </footer>
 
 <script>
@@ -54,7 +54,7 @@
 
         const tempImg = new Image();
         tempImg.onload = () => {
-            monkey.setAttribute('src', 'assets/' + next);
+            monkey.setAttribute('src', '../assets/' + next);
 
             if (next === 'monkey3.png') {
                 clickable = false;
@@ -71,7 +71,7 @@
                 }, 2000);
             }
         };
-        tempImg.src = 'assets/' + next;
+        tempImg.src = '../assets/' + next;
     });
 </script>
 </body>
