--- a/game/index.html
+++ b/game/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+  <link rel="canonical" href="https://evgdamk.com/game/" />
   <title>damk: runner</title>
   <style>
     html, body {
