--- a/objects/index.html
+++ b/objects/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="damk is personal space — drawings, soft memories, small objects." />
+  <link rel="canonical" href="https://evgdamk.com/objects/" />
   <title>goods — damk</title>
   <link rel="stylesheet" href="../css/styles.css" />
   <script data-goatcounter="https://damk.goatcounter.com/count"
