--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="description" content="damk is personal space — drawings, soft memories, small objects."/>
     <link rel="canonical" href="https://evgdamk.com/"/>
     <title>about — damk</title>
-    <link rel="stylesheet" href="../css/styles.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
     <script data-goatcounter="https://damk.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
-    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 <header>
