--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
 <main>
     <h1>about</h1>
+    <div class="about-photo">
+        <img src="assets/about.jpg" alt="DAMK sitting with his dog"/>
+    </div>
     <p>My name is DAMK. I make paintings, characters and objects from things I remember — and things I never want to
         forget.<br/><br/>
         I grew up in a post-Soviet city where garages, playgrounds, cracked tiles and old cars meant safety.<br/>
