--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <main>
     <h1>about</h1>
     <div class="about-photo">
-        <img src="assets/about.jpg" alt="DAMK sitting with his dog"/>
+        <img src="assets/about.jpg" alt="DAMK sitting with his dog" class="about-img"/>
     </div>
     <p>My name is DAMK. I make paintings, characters and objects from things I remember — and things I never want to
         forget.<br/><br/>
