--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 
 <main>
-    <h1>about</h1>
+    <h1>EVG DAMK</h1>
     <div class="about-photo">
         <img src="assets/about.jpg" alt="DAMK sitting with his dog" class="about-img"/>
     </div>
