--- a/objects/index.html
+++ b/objects/index.html
@@ -24,18 +24,36 @@
 <main>
   <h1>commission</h1>
   <p>you can take these with you. or not.</p>
+  <section class="shop">
+    <h2>shop</h2>
+    <p class="shop-note">objects for sale — new things appear sometimes</p>
 
-  <section class="object">
-    <h2>custom figure</h2>
-    <img src="../assets/figure.jpg" alt="custom monkey figure" class="figure-img"/>
-    <p class="figure-text">
-      small monkey toy, 10 cm tall<br>
-      random color · hand-poured plastic<br>
-      €30 each<br><br>
-      open to other ideas too — <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM me on Instagram</a>
-    </p>
+    <!-- первый товар -->
+    <div class="product">
+      <img src="../assets/figure.jpg" alt="custom monkey figure" class="product-img" />
+      <div class="product-info">
+        <h3>custom figure</h3>
+        <p>
+          small monkey toy · 10 cm tall<br>
+          random color · hand-poured plastic<br>
+          €30
+        </p>
+        <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM to order</a>
+      </div>
+    </div>
+
+    <!-- шаблон для будущих товаров -->
+    <!--
+    <div class="product">
+      <img src="../assets/your-next-product.jpg" alt="product name" class="product-img" />
+      <div class="product-info">
+        <h3>название</h3>
+        <p>описание · детали · цена</p>
+        <a href="..." class="cta-link">DM to order</a>
+      </div>
+    </div>
+    -->
   </section>
-
   <section class="object">
     <h2>custom work</h2>
     <p>
