--- a/objects/index.html
+++ b/objects/index.html
@@ -32,7 +32,7 @@
     <div class="product">
       <img src="../assets/figure.jpg" alt="custom monkey figure" class="product-img" />
       <div class="product-info">
-        <h3>custom figure</h3>
+        <h3>damkulik</h3>
         <p>
           small monkey toy · 10 cm tall<br>
           random color · hand-poured plastic<br>
