--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         The places that shaped us, even if nobody noticed them.<br/><br/>
         My practice mixes nostalgia, street memory, irony and quiet objects — like playgrounds without kids, or toys
         that never smile.</p>
+
+    <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">Instagram</a>
 </main>
 
 <footer>
