--- a/objects/index.html
+++ b/objects/index.html
@@ -7,6 +7,7 @@
   <link rel="canonical" href="https://evgdamk.com/objects/" />
   <title>goods — damk</title>
   <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="../css/quiz.css" />
   <script data-goatcounter="https://damk.goatcounter.com/count"
           async src="//gc.zgo.at/count.js"></script>
   <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
@@ -23,6 +24,12 @@
 
 <main>
   <h1>commission</h1>
+  <!-- quiz banner -->
+  <a class="quiz-banner" href="/quiz/" aria-label="find your perfect art figure">
+    <span class="art">🧸</span>
+    <span><strong>not sure what to choose?</strong><br>
+    take the quiz → get your perfect idea</span>
+  </a>
   <section class="shop">
     <p>you can take these with you. or not.</p>
 
