--- a/quiz/index.html
+++ b/quiz/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Instagram Quiz</title>
-    <link rel="stylesheet" href="../css/quiz.css" />
+    <meta name="description" content="Take a 4‑step quiz to get a tailored idea for a custom art figure. Copy the message and DM on Instagram to start your commission." />
+    <title>Find Your Art Figure — 4‑Step Quiz | evgdamk</title>
+    <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
     <header>
-        <h1>Instagram Quiz</h1>
+        <h1>Find your art figure</h1>
     </header>
     <main>
         <form id="quiz-form">
@@ -95,7 +96,7 @@
                 <h2>Your result 🎉</h2>
                 <p id="result-message"></p>
                 <button type="button" id="copy-message-btn">Copy message</button>
-                <button type="button" id="write-instagram-btn">Write in Instagram</button>
+                <a id="write-instagram-btn" class="btn" href="https://instagram.com/evg.damk" target="_blank" rel="noopener">Write in Instagram</a>
             </section>
         </form>
     </main>
