--- a/objects/index.html
+++ b/objects/index.html
@@ -33,13 +33,12 @@
     <p>you can take these with you. or not.</p>
 
     <div class="product">
-      <img src="../assets/figure.jpg" alt="custom monkey figure" class="product-img" />
+      <img src="../assets/keychain1.jpg" alt="keychain" class="product-img" />
       <div class="product-info">
-        <h3>damkulik</h3>
+        <h3>keychain #1</h3>
         <p>
-          small monkey toy · 10 cm tall<br>
           random color · hand-poured plastic<br>
-          €30
+          €20
         </p>
         <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM to order</a>
       </div>
